Json encoded js variable outputs from php. Fixed issue on ie9 with tip boxes not displaying.

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@
 	max-width: 300px;
 	border: 1px solid #aaa;
 	box-shadow: 0 0 10px 0px rgba(0,0,0,0.5);
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 }
 
